fixed vertical scroll spacing on case study

--- a/main.css
+++ b/main.css
@@ -643,7 +643,7 @@ body {
 }
 .main {
     width: 68%;
-    height: 919vh;
+    min-height: 100vh;
 }
 .sidebar {
     width: 24%;
